multipage functionality implemented

--- a/index copy.html
+++ b/index copy.html
@@ -8,7 +8,7 @@
     <body>
         <div class="app">
             <div class="navbar"></div>
-            <div id="trending" class="trending">
+            <div class="trending">
                 <div class="trending-header">Trending Movies</div>
                 <div id="trending-body" class="trending-body"></div>
             </div>
