--- a/movie-details.html
+++ b/movie-details.html
@@ -8,11 +8,8 @@
     <body>
         <div class="app">
             <div class="navbar"></div>
-            <div id="trending" class="trending">
-                <div class="trending-header">Trending Movies</div>
-                <div id="trending-body" class="trending-body"></div>
-            </div>
+            <div id="movieDetails" class="movieDetails"></div>
         </div>
-        <script src="index.js"></script>   
+        <script src="movie-details.js"></script>   
     </body>
 </html>
