--- a/movie-details.html
+++ b/movie-details.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>XMDB</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles/movie-details.css">
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     </head>
     <body>
@@ -10,6 +10,6 @@
             <div class="navbar"></div>
             <div id="movieDetails" class="movieDetails"></div>
         </div>
-        <script src="movie-details.js"></script>   
+        <script src="scripts/movie-details.js"></script>   
     </body>
 </html>
