--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>XMDB</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles/index.css">
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     </head>
     <body>
@@ -13,6 +13,6 @@
                 <div id="trending-body" class="trending-body"></div>
             </div>
         </div>
-        <script src="index.js"></script>   
+        <script src="scripts/index.js"></script>   
     </body>
 </html>
