--- a/movie-details.html
+++ b/movie-details.html
@@ -8,7 +8,24 @@
     <body>
         <div class="app">
             <div class="navbar"></div>
-            <div id="movieDetails" class="movieDetails"></div>
+            <div id="movieDetails" class="movieDetails">
+<!-- ------------------------------------------------------------------------ -->
+<!-- <div class="movie-details">
+    <div class="movie-image">
+        <img class="posterImage" src="https://image.tmdb.org/t/p/w500${movie.poster_path}" alt="${movie.title}">
+    </div>
+    <div class="details">
+        <div class="title">${movie.title}</div>
+        <div class="subtitle">${movie.tagline}</div>
+        <div class="genres">${genresHTML}</div>
+        <div class="overview">${movie.overview}</div>
+    </div>
+</div> -->
+
+
+
+<!-- ------------------------------------------------------------------------ -->
+            </div>
         </div>
         <script src="scripts/movie-details.js"></script>   
     </body>
