--- a/genre.html
+++ b/genre.html
@@ -2,15 +2,17 @@
 <html>
     <head>
         <title>XMDB</title>
-        <link rel="stylesheet" href="styles/movie-details.css">
+        <link rel="stylesheet" href="styles/index.css">
+        <link rel="stylesheet" href="styles/genre.css">
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     </head>
     <body>
         <div class="app">
             <div class="navbar"></div>
-            <div id="movieDetails" class="movieDetails">
+            <div id="trending-header" class="trending-header"></div>
+            <div id="genre" class="genre">
             </div>
         </div>
-        <script src="scripts/movie-details.js"></script>   
+        <script src="scripts/genre.js"></script>   
     </body>
 </html>
